--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,12 @@
 # Core Dachi framework (adjust path as needed)
 # dachi>=0.1.0
 
+numpy>=1.23.0
+pandas>=1.5.0
+scikit-learn>=1.0.0
+scipy>=1.7.0
+
+
 # Streamlit for web interface
 streamlit>=1.28.0
 
@@ -14,3 +20,19 @@ asyncio-throttle>=1.0.0
 
 # Data handling
 pydantic>=2.0.0
+pydantic-core
+
+# Framework installation
+./framework/
+
+# Development tools
+ipython
+ipykernel
+jupyter
+
+# Additional dependencies for tutorial
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
+
+# Environment variable management
+python-dotenv>=1.0.0
